--- a/index.html
+++ b/index.html
@@ -1,3 +1,71 @@
-<html>
-<h1>HELLO</h1>
+<!DOCTYPE html>
+<html lang="en" xml:lang="en">
+<head>
+    <title>Ahmed Anwar</title>
+    <meta content="text/html;charset=UTF-8" http-equiv="Content-type"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="scripts/script.js"></script>
+    <link href="styles/style.css" rel="stylesheet">
+</head>
+
+<body style="margin: 0">
+<div class="container">
+    <section class="background" id="home">
+        <div class="content-wrapper">
+            <p class="content-title">Ahmed Anwar</p>
+            <p class="content-subtitle">Software Engineer</p>
+        </div>
+    </section>
+    <section class="background" id="jobs">
+        <div class="content-wrapper">
+            <p class="content-title">Professional Experience</p>
+            <div class="jobs-container">
+                <div class="card card0">
+                    <div class="border">
+                        <h2 class="exp-title">Associate Software Support Engineer</h2>
+                    </div>
+                </div>
+                <div class="card card1">
+                    <div class="border">
+                        <h2 class="exp-title">Associate Software Engineer</h2>
+                    </div>
+                </div>
+                <div class="card card2">
+                    <div class="border">
+                        <h2 class="exp-title">Software Engineer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="background" id="jobs">
+        <div class="content-wrapper">
+            <p class="content-title">Education</p>
+            <div class="jobs-container">
+                <div class="card card0">
+                    <div class="border">
+                        <h2 class="exp-title">Associate Software Support Engineer</h2>
+                    </div>
+                </div>
+                <div class="card card1">
+                    <div class="border">
+                        <h2 class="exp-title">Associate Software Engineer</h2>
+                    </div>
+                </div>
+                <div class="card card2">
+                    <div class="border">
+                        <h2 class="exp-title">Software Engineer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="background" id="contact">
+        <div class="content-wrapper">
+            <p class="content-subtitle">Contact</p>
+        </div>
+    </section>
+</div>
+</body>
 </html>
